# pdns

./: Makefile.am  configure.ac
m4/: pdns-enable-benchmarks.m4  pdns_check_benchmark.m4  pdns_enable_benchmarks.m4
pdns/: dnsmessage.proto
pdns/benchmarks/: .gitignore  Makefile.am  benchmarkpb.cc  dnslabeltext.cc
